stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto+Condensed:ital@0;1&display=swap');

:root {
    --spacing: .25rem; 
    --primary: #0E0E0E;
    --secondary: #2B2B2B;
    --text-primary: #FFFFFF;
    --text-secondary: #8E8E8E;

    --purple: #7C3AED;
    --blue: #3B82F6;
    --cyan: #06B6D4;
    --red: #A21F2D;
    --green: #06D40D;
    --gray: #8E8E8E;

    --font-lg: 24px;
    --font-md: 18px;
    --font-sm: 12px;
}

body {
    background-color: #0E0E0E;
    margin: 0px;
}

body > header {
    display: flex;
    z-index: 1000;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    position: sticky;
    top: 0;
    margin-left: auto;
    margin-right: auto;
    padding-right: calc(var(--spacing) * 5);
    padding-left: calc(var(--spacing) * 5);
    max-width: calc(var(--spacing) * 360);
    height: 8vh;
    font-size: 12pt;
    background-color: var(--primary);
}

body > header h1 {
    padding-right: calc(var(--spacing) * 3);
    font-size: 20pt;
}

body > header button {
    display: block;
    height: 70%;
    width: 5vw;
    border: 0;
    color: #000000;
}

body > header div {
    display: flex;
    width: auto;
    flex-grow: 1;
    height: 100%;
    align-items: center;
    flex-direction: row;
    column-gap: calc(var(--spacing) * 2);
}

body > header div button {
    display: block;
    text-align: left;
    width: 12vw;
    border: 0;
}


main {
    margin-left: auto;
    margin-right: auto;

    display: flex;
    flex-direction: column;
    gap: calc(var(--spacing) * 15);
    padding-right: calc(var(--spacing) * 5);
    padding-left: calc(var(--spacing) * 5);
    max-width: calc(var(--spacing) * 360);
}

section, #hero {
    border: 2px solid var(--secondary);
    color: var(--text-primary);
    width: 100%;
    height: 80vh;
    display: flex;
    align-items: end;
}

#hero #container {
    position: relative;
    margin-left: calc(var(--spacing) * 8);
    display: flex;
    flex-direction: column;
    gap: calc(var(--spacing) * 2);
    align-items: start;
    padding-bottom: calc(var(--spacing) * 8);
}

#hero #container * {
    margin-top: 0;
    margin-bottom: 0;
}

#hero #container #button-container {
    display: flex;
    flex-direction: row;
    gap: calc(var(--spacing) * 2);
    width: 60%;

    margin-top: 0;
    margin-bottom: 0;
}

#hero #container #button-container button {
    aspect-ratio: 1/1;
    width: 100%;
    background-color: #FFFFFF;
    border: 0;
}

section, #tech-stack {
    border: 2px solid var(--cyan);
    color: var(--text-primary);
    width: 100%;
    height: 80vh;
    display: flex;
    align-items: start;
}

#tech-stack header {
    border: 1px solid var(--cyan);
    padding-left: calc(var(--spacing) * 5);
    width: 100%;
    height: fit-content;
    font-size: var(--font-lg);

    display: flex;
    flex-direction: column;
    gap: 0;

}

#tech-stack header *:first-child {
    color: var(--cyan);
    margin-top: calc(var(--spacing) * 4);
    margin-bottom: 0;
}
#tech-stack header p {
    margin-top: 0;
    margin-bottom: calc(var(--spacing) * 4);
}


footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    color: #FFFFFF;
    margin-left: auto;
    margin-right: auto;
    padding-right: calc(var(--spacing) * 5);
    padding-left: calc(var(--spacing) * 5);
    max-width: calc(var(--spacing) * 360);
}

footer ~ p {
    font-size: 8px;
}

footer div {
    display: flex;
    flex-direction: column;
    gap: calc(var(--spacing) * 5);
}

footer div * {
    display: flex;
    flex-direction: column;
    text-align: right;
    gap: 0;
    margin-top: 0;
    margin-bottom: 0;
}

footer div button {
    background-color: #FFFFFF;
    text-align: center;
    border: 0
}

.ibm-plex-mono-regular {
  font-family: "IBM Plex Mono", monospace;
  font-weight: 400;
  font-style: normal;
}

.ibm-plex-mono-regular-italic {
  font-family: "IBM Plex Mono", monospace;
  font-weight: 400;
  font-style: italic;
}

.ibm-plex-mono-bold {
  font-family: "IBM Plex Mono", monospace;
  font-weight: 700;
  font-style: normal;
}

.roboto-condensed-regular {
  font-family: "Roboto Condensed", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.bg-primary {
    background-color: var(--primary);
}
.bg-secondary {
    background-color: var(--secondary);
}
.bg-white {
    background-color: #FFFFFF;
}

.text-primary {
    color: var(--text-primary);
}
.text-secondary {
    color: var(--text-secondary);
}

